tests/fail/test_no_field_number.nim
import ../../protobuf_serialization

type NoFieldNumber = object
  x: bool

discard Protobuf.encode(NoFieldNumber())
